--- a/infra/gitea/ingress.yaml
+++ b/infra/gitea/ingress.yaml
@@ -21,3 +21,19 @@ spec:
       - main: k.joshuachp.dev
         sans:
           - "*.k.joshuachp.dev"
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRouteTCP
+metadata:
+  name: gitea-ssh
+  namespace: gitea
+  annotations:
+    kubernetes.io/ingress.class: traefik
+spec:
+  entryPoints:
+    - ssh
+  routes:
+    - match: "HostSNI(`*`)"
+      services:
+        - name: gitea-ssh
+          port: 22
