--- a/infra/cert-manager/issuer/letsencrypt-staging.yaml
+++ b/infra/cert-manager/issuer/letsencrypt-staging.yaml
@@ -14,7 +14,7 @@ spec:
           cloudflare:
             apiTokenSecretRef:
               name: cloudflare-api-token
-              key: api-token
+              key: api-key
         selector:
           dnsZones:
             - "joshuachp.dev"
