feat(traefik): deploy as a daemon set

--- a/infra/traefik/values.yaml
+++ b/infra/traefik/values.yaml
@@ -5,6 +5,9 @@ globalArguments:
 additionalArguments:
   - "--serversTransport.insecureSkipVerify=true"
 
+deployment:
+  kind: "DaemonSet"
+
 ports:
   web:
     redirectTo:
