--- a/infra/traefik/values.yaml
+++ b/infra/traefik/values.yaml
@@ -5,9 +5,6 @@ globalArguments:
 additionalArguments:
   - "--serversTransport.insecureSkipVerify=true"
 
-deployment:
-  kind: "DaemonSet"
-
 ports:
   web:
     redirectTo:
@@ -64,6 +61,9 @@ logs:
         defaultmode: keep
 
 service:
+  annotations:
+    metallb.universe.tf/loadBalancerIPs: 10.0.1.1
   loadBalancerSourceRanges:
     - 127.0.0.1/32
     - 10.0.0.1/20
+    - 10.1.0.1/20
