--- a/infra/traefik/values.yaml
+++ b/infra/traefik/values.yaml
@@ -53,12 +53,12 @@ logs:
   general:
     level: DEBUG
     format: json
-  access:
-    enabled: true
-    format: json
-    fields:
-      headers:
-        defaultmode: keep
+  # access:
+  #   enabled: true
+  #   format: json
+  #   fields:
+  #     headers:
+  #       defaultmode: keep
 
 service:
   annotations:
