--- a/infra/argocd/application.yaml
+++ b/infra/argocd/application.yaml
@@ -11,3 +11,17 @@ spec:
     path: infra/homepage
   destination:
     server: https://kubernetes.default.svc
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: argocd
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/joshuachp/nixos-config
+    targetRevision: feature/argocd
+    path: infra/argocd
+  destination:
+    server: https://kubernetes.default.svc
