--- a/infra/argocd/applications.yaml
+++ b/infra/argocd/applications.yaml
@@ -5,12 +5,20 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  source:
-    repoURL: https://github.com/joshuachp/nixos-config
-    targetRevision: feature/argocd
-    path: infra/argocd
+  sources:
+    - repoURL: https://github.com/joshuachp/nixos-config
+      targetRevision: feature/argocd
+      path: infra/argocd
+      ref: repo
+    - chart: argo-cd
+      repoURL: https://argoproj.github.io/argo-helm
+      targetRevision: 6.1.0
+      helm:
+        valueFiles:
+          - $repo/infra/argocd/values.yaml
   destination:
     server: https://kubernetes.default.svc
+    namespace: argocd
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
