--- a/infra/metallb/config.yaml
+++ b/infra/metallb/config.yaml
@@ -1,7 +1,7 @@
 apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
-  name: first-pool
+  name: pool
   namespace: metallb
 spec:
   addresses:
@@ -11,13 +11,7 @@ spec:
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
-  name: example
-  namespace: metallb
----
-apiVersion: metallb.io/v1beta1
-kind: L2Advertisement
-metadata:
-  name: example
+  name: advertisement
   namespace: metallb
 spec:
   ipAddressPools:
