--- a/infra/argocd/values.yaml
+++ b/infra/argocd/values.yaml
@@ -6,6 +6,8 @@ configs:
     server.insecure: true
 
 notifications:
+  secret:
+    create: false
   subscriptions:
     - recipients:
         - ntfy
