feat(argocd): add posgresql application

--- a/infra/argocd/applications.yaml
+++ b/infra/argocd/applications.yaml
@@ -96,6 +96,19 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
+  name: postgresql
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/joshuachp/nixos-config
+    path: infra/postgresql
+  destination:
+    server: https://kubernetes.default.svc
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
   name: syncthing
   namespace: argocd
 spec:
