--- a/infra/traefik/values.yaml
+++ b/infra/traefik/values.yaml
@@ -36,6 +36,12 @@ ports:
     exposedPort: 21027
     protocol: UDP
     exposeInternal: false
+  db:
+    port: 5432
+    expose: true
+    exposedPort: 5432
+    protocol: TCP
+    exposeInternal: false
 
 providers:
   kubernetesCRD:
