fix(cron): make it run at the first minute

--- a/infra/postgres/cron.yaml
+++ b/infra/postgres/cron.yaml
@@ -22,7 +22,7 @@ spec:
   # 12h jobs should is probably stuck
   concurrencyPolicy: Replace
   failedJobsHistoryLimit: 1
-  schedule: "* */12 * * *"
+  schedule: "0 */12 * * *"
   jobTemplate:
     metadata:
       name: backup
