--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,4 @@
+default_install_hook_types: [pre-commit, pre-push, commit-msg]
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
@@ -8,9 +9,11 @@ repos:
         args: ["--allow-multiple-documents"]
       - id: check-added-large-files
   - repo: https://github.com/joshuachp/pre-commit-hooks
-    rev: 0.1.33
+    rev: 0.1.34
     hooks:
       - id: nix-nixpkgs-fmt
       - id: nix-statix
       - id: nix-flake-check
       - id: yaml-fmt-prettier
+      - id: typos
+      - id: committed
