fix(forgejo): set the correct name

--- a/infra/forgejo/values.yaml
+++ b/infra/forgejo/values.yaml
@@ -47,7 +47,7 @@ gitea:
       valueFrom:
         secretKeyRef:
           name: forgejo-env-secret
-          key: mailPassword
+          key: mailerPassword
   config:
     server:
       DOMAIN: git.k.joshuachp.dev
