fix(forgejo): use correct mailer user

--- a/infra/forgejo/values.yaml
+++ b/infra/forgejo/values.yaml
@@ -42,7 +42,7 @@ gitea:
       valueFrom:
         secretKeyRef:
           name: forgejo-env-secret
-          key: mailerFrom
+          key: mailerUser
     - name: FORGEJO__MAILER__PASSWD
       valueFrom:
         secretKeyRef:
