--- a/infra/forgejo/values.yaml
+++ b/infra/forgejo/values.yaml
@@ -74,5 +74,5 @@ gitea:
       ISSUE_INDEXER_TYPE: bleve
       REPO_INDEXER_ENABLED: true
 
-containerSecurityContext:
+podSecurityContext:
   fsGroup: 1001
