fix(forgejo): fs group

--- a/infra/forgejo/values.yaml
+++ b/infra/forgejo/values.yaml
@@ -77,5 +77,6 @@ gitea:
 containerSecurityContext:
   runAsUser: 1001
   runAsGroup: 1001
+  allowPrivilegeEscalation: true
 podSecurityContext:
   fsGroup: 1001
