--- a/infra/forgejo/values.yaml
+++ b/infra/forgejo/values.yaml
@@ -74,6 +74,7 @@ gitea:
       ISSUE_INDEXER_TYPE: bleve
       REPO_INDEXER_ENABLED: true
 
+image.rootless: false
 containerSecurityContext:
   runAsUser: 1000
   runAsGroup: 1001
