fix(forgejo): fs group

--- a/infra/forgejo/storage.yaml
+++ b/infra/forgejo/storage.yaml
@@ -9,4 +9,23 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: smb
+  storageClassName: smb-alt
+  dataSource:
+    kind: PersistentVolumeClaim
+    name: forgejo-pvc-clone
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: forgejo-pvc-clone
+  namespace: forgejo
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 10Gi
+  storageClassName: smb-alt
+  dataSource:
+    kind: PersistentVolumeClaim
+    name: forgejo-pvc
