refactor(forgejo): disable the redis cluster

--- a/infra/forgejo/values.yaml
+++ b/infra/forgejo/values.yaml
@@ -1,7 +1,5 @@
 redis-cluster:
-  enabled: true
-  cluster:
-    nodes: 1
+  enabled: false
 postgresql:
   enabled: false
 postgresql-ha:
@@ -42,10 +40,9 @@ gitea:
     session:
       PROVIDER: db
     cache:
-      ADAPTER: redis-cluster
+      ADAPTER: redis
     queue:
       TYPE: redis
-      CONN_STR: redis+cluster://127.0.0.1:6379/0
     indexer:
       ISSUE_INDEXER_TYPE: bleve
       REPO_INDEXER_ENABLED: true
