--- a/infra/argocd/applications.yaml
+++ b/infra/argocd/applications.yaml
@@ -71,6 +71,12 @@ spec:
       helm:
         valueFiles:
           - $repo/infra/forgejo/values.yaml
+    - chart: redis
+      repoURL: https://charts.bitnami.com/bitnami
+      targetRevision: 18.17.0
+      helm:
+        valueFiles:
+          - $repo/infra/forgejo/redis-values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: forgejo
