--- a/infra/forgejo/values.yaml
+++ b/infra/forgejo/values.yaml
@@ -41,8 +41,10 @@ gitea:
       PROVIDER: db
     cache:
       ADAPTER: redis
+      HOST: redis://:forgejo@tcp-redis.tcp.forgejo-redis-master.forgejo.svc.cluster.local:6379/0?pool_size=100&idle_timeout=180s
     queue:
       TYPE: redis
+      CONN_STR: redis://:forgejo@tcp-redis.tcp.forgejo-redis-master.forgejo.svc.cluster.local:6379/0?pool_size=100&idle_timeout=180s
     indexer:
       ISSUE_INDEXER_TYPE: bleve
       REPO_INDEXER_ENABLED: true
