--- a/infra/argocd/applications.yaml
+++ b/infra/argocd/applications.yaml
@@ -150,6 +150,27 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
+  name: prometheus
+  namespace: argocd
+spec:
+  project: default
+  sources:
+    - repoURL: https://github.com/joshuachp/nixos-config
+      path: infra/prometheus
+      ref: repo
+    - chart: prometheus
+      repoURL: https://prometheus-community.github.io/helm-charts
+      targetRevision: 25.15.0
+      helm:
+        valueFiles:
+          - $repo/infra/prometheus/values.yaml
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: prometheus
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
   name: syncthing
   namespace: argocd
 spec:
