--- a/infra/prometheus/ingress.yaml
+++ b/infra/prometheus/ingress.yaml
@@ -1,18 +1,23 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: homepage
-  namespace: homepage
+  name: prometheus
+  namespace: prometheus
   annotations:
     kubernetes.io/ingress.class: traefik
 spec:
   entryPoints:
     - websecure
   routes:
-    - match: "Host(`home.k.joshuachp.dev`)"
+    - match: "Host(`prometheus.k.joshuachp.dev`)"
       kind: Rule
       services:
-        - name: homepage
+        - name: prometheus-server
+          port: http
+    - match: "Host(`alertmanager.k.joshuachp.dev`)"
+      kind: Rule
+      services:
+        - name: prometheus-alertmanager
           port: http
   tls:
     secretName: cert-k-joshuachp-dev
