fix(firefly): use fsGroup

--- a/infra/firefly/values.yaml
+++ b/infra/firefly/values.yaml
@@ -35,6 +35,7 @@ persistence:
 podSecurityContext:
   runAsUser: 1001
   runAsGroup: 1001
+  fsGroup: 1001
 cronjob:
   # TODO: enable
   enabled: false
