--- a/infra/argocd/applications.yaml
+++ b/infra/argocd/applications.yaml
@@ -71,6 +71,12 @@ spec:
       helm:
         valueFiles:
           - $repo/infra/firefly/values.yaml
+    - chart: importer
+      repoURL: https://firefly-iii.github.io/kubernetes
+      targetRevision: 1.3.1
+      helm:
+        valueFiles:
+          - $repo/infra/firefly/importer-values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: firefly
