fix(firefly): set kube internal url

--- a/infra/firefly/importer-values.yaml
+++ b/infra/firefly/importer-values.yaml
@@ -2,6 +2,6 @@ config:
   env:
     TZ: "Europe/Rome"
 fireflyiii:
-  url: "http://firefly-firefly-iii:80"
+  url: "http://http.tcp.firefly-firefly-iii.firefly.svc.cluster.local"
   vanityUrl: "https://firefly.k.joshuachp.dev"
   existingSecret: "firefly-importer"
