Revert "fix(woodpecker): set correct forgejo url"
This reverts commit 5eeeabba495a26837f36086bca178e6907075ffb.

--- a/infra/woodpecker/values.yaml
+++ b/infra/woodpecker/values.yaml
@@ -6,8 +6,8 @@ agent:
 server:
   env:
     WOODPECKER_GITEA: true
+    WOODPECKER_GITEA_URL: https://git.k.joshuachp.dev
     WOODPECKER_HOST: https://ci.k.joshuachp.dev
-    WOODPECKER_GITEA_URL: http://http.tcp.forgejo-http.forgejo.svc.cluster.local
   extraSecretNamesForEnvFrom:
     - woodpecker-env
   persistentVolume:
