fix(woodpecker): add admin user

--- a/infra/woodpecker/values.yaml
+++ b/infra/woodpecker/values.yaml
@@ -5,6 +5,7 @@ agent:
     - woodpecker-env
 server:
   env:
+    WOODPECKER_ADMIN: woodpecker,admin,joshuachp
     WOODPECKER_GITEA: true
     WOODPECKER_GITEA_URL: https://git.k.joshuachp.dev
     WOODPECKER_HOST: https://ci.k.joshuachp.dev
