--- a/infra/woodpecker/values.yaml
+++ b/infra/woodpecker/values.yaml
@@ -1,6 +1,6 @@
 agent:
   env:
-    WOODPECKER_BACKEND_K8S_STORAGE_CLASS: "local-path"
+    WOODPECKER_BACKEND_K8S_STORAGE_CLASS: "smb"
   extraSecretNamesForEnvFrom:
     - woodpecker-env
   persistentVolume:
