--- a/infra/woodpecker/values.yaml
+++ b/infra/woodpecker/values.yaml
@@ -11,6 +11,8 @@ server:
     WOODPECKER_GITEA: true
     WOODPECKER_GITEA_URL: https://git.k.joshuachp.dev
     WOODPECKER_HOST: https://ci.k.joshuachp.dev
+    WOODPECKER_WEBHOOK_HOST: http://woodpecker-server.woodpecker.svc.cluster.local
+    WOODPECKER_AUTHENTICATE_PUBLIC_REPOS: true
   extraSecretNamesForEnvFrom:
     - woodpecker-env
     - woodpecker-server-env
